** Release Notes

0.5.79 (3/16/2017)
  * following the change to the project name in rel 22
  * increased record lifetime in pbook to 180 days

0.5.78 (3/6/2017)
  * fixed pathena to respect --randomMIN
  * added --respectSplitRule to pathena/prun

0.5.77 (2/8/2017)
  * removed cmtconfig check with a hardcoded list

0.5.76 (2/3/2017)
  * removed tar error messages with empty run dir

0.5.75 (01/31/2017)
  * fixed getAthenaVer for CMake-based caches

0.5.74 (01/19/2017)
  * added new method for HC: getTaskParamsMap
  * Replaced README.txt by README.md

0.5.73 (12/7/2016)
  * added support for CMake based nightlies
  * fixed cmtConfig for nightlies

0.5.72 (11/29/2016)
  * fixed pathena to work witout a local build area for CMake

0.5.71 (10/04/2016)
  * added new methods for Hammercloud (getPandaIDsWithTaskID, reactivateTask, getTaskStatus)

0.5.70 (8/31/2016)
  * added 10 min timeout to curl GET and POST requests

0.5.69 (8/1/2016)
  * fixed pathena merge for CMake

0.5.68 (7/26/2016)
  * CMake compatible version

0.5.67 (7/26/2016)
  * improved pathena to automatically deduce actual output names for derivation trf
  * fixed pathena for SHARE in THistSvc

0.5.66 (7/7/2016)
  * disabled log file transfers with --destSE

0.5.65 (6/24/2016)
  * fixed addNthFieldOfInFileToLFN for pmerge

0.5.64 (6/23/2016)
  * added addNthFieldOfInFileToLFN

0.5.63 (3/31/2016)
  * fixed getAthenaVer for ath releases

0.5.62 (3/16/2016)
  * fixed newOpts in pbook

0.5.61 (2/26/2016)
  * added --allowNoOutput to pathena/prun

0.5.60 (2/9/2016)
  * added --skipFilesUsedBy

0.5.59 (1/25/2016)
  * changed --addNthFieldOfInDSToLFN to allow multiple fields

0.5.58 (1/19/2016)
  * added x86_64-slc6-gcc49-opt to the valid cmtconfig list

0.5.57 (11/20/2015)
  * fixed cmtConfig lookup in prun with --athenaTag
  * added support for AthAnalysis*

0.5.56 (10/12/2015)
  * fixed pathena/prun to ignore local jobReport.*
  * added --eventPickWithGUID

0.5.55 (9/9/2015)